--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.chartborder.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.chartborder.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartBorder:class'
     summary: |-
-      <span data-ttu-id="64897-101">代表 chart 元素的边框格式。</span><span class="sxs-lookup"><span data-stu-id="64897-101">Represents the border formatting of a chart element.</span></span>
+      代表 chart 元素的边框格式。
 
-      <span data-ttu-id="64897-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="64897-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartBorder
     fullName: Excel.ChartBorder
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartBorder#color:member'
@@ -26,9 +26,9 @@ items:
       - 'excel!Excel.ChartBorder#weight:member'
   - uid: 'excel!Excel.ChartBorder#color:member'
     summary: |-
-      <span data-ttu-id="64897-103">表示图表中的边框颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="64897-103">HTML color code representing the color of borders in the chart.</span></span>
+      表示图表中的边框颜色的 HTML 颜色代码。
 
-      <span data-ttu-id="64897-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="64897-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -40,7 +40,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.ChartBorder#context:member'
-    summary: <span data-ttu-id="64897-105">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="64897-105">The request context associated with the object.</span></span> <span data-ttu-id="64897-106">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="64897-106">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -53,9 +53,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartBorder#lineStyle:member'
     summary: |-
-      <span data-ttu-id="64897-107">表示边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="64897-107">Represents the line style of the border.</span></span> <span data-ttu-id="64897-108">有关详细信息，请参阅 ChartLineStyle。</span><span class="sxs-lookup"><span data-stu-id="64897-108">See Excel.ChartLineStyle for details.</span></span>
+      表示边框的线条样式。 有关详细信息，请参阅 ChartLineStyle。
 
-      <span data-ttu-id="64897-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="64897-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: lineStyle
     fullName: lineStyle
     langs:
@@ -67,7 +67,7 @@ items:
         type:
           - 'excel!Excel.ChartBorder#lineStyle~0:complex'
   - uid: 'excel!Excel.ChartBorder#load:member(1)'
-    summary: <span data-ttu-id="64897-110">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="64897-110">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="64897-111">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="64897-111">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -81,11 +81,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="64897-112">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="64897-112">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartBorderLoadOptions:interface'
   - uid: 'excel!Excel.ChartBorder#load:member(2)'
-    summary: <span data-ttu-id="64897-113">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="64897-113">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="64897-114">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="64897-114">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -99,11 +99,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="64897-115">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="64897-115">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartBorder#load:member(3)'
-    summary: <span data-ttu-id="64897-116">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="64897-116">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="64897-117">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="64897-117">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -121,7 +121,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="64897-118">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="64897-118">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -129,9 +129,9 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.ChartBorder#set:member(1)'
-    summary: '<span data-ttu-id="64897-119">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="64897-119">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="64897-120">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="64897-120">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="64897-121">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="64897-121">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartBorder): void`
     name: 'set(properties, options)'
@@ -147,15 +147,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="64897-122">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="64897-122">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartBorderUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="64897-123">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="64897-123">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartBorder#set:member(2)'
-    summary: '<span data-ttu-id="64897-124">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="64897-124">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -173,7 +173,7 @@ items:
           type:
             - 'excel!Excel.ChartBorder:class'
   - uid: 'excel!Excel.ChartBorder#toJSON:member(1)'
-    summary: '<span data-ttu-id="64897-125">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="64897-125">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="64897-126">.</span><span class="sxs-lookup"><span data-stu-id="64897-126"></span></span> <span data-ttu-id="64897-127">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="64897-127"></span></span><!-- --><span data-ttu-id="64897-128">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartBorder 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartBorderData`</span><span class="sxs-lookup"><span data-stu-id="64897-128">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartBorder object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartBorderData`</span></span><!-- --><span data-ttu-id="64897-129">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="64897-129">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartBorder 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartBorderData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -187,9 +187,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartBorder#weight:member'
     summary: |-
-      <span data-ttu-id="64897-130">表示边框的粗细，以磅为单位。</span><span class="sxs-lookup"><span data-stu-id="64897-130">Represents weight of the border, in points.</span></span>
+      表示边框的粗细，以磅为单位。
 
-      <span data-ttu-id="64897-131">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="64897-131">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: weight
     fullName: weight
     langs:
@@ -201,7 +201,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -220,7 +220,7 @@ references:
     name: Excel.Interfaces.ChartBorderLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartBorderUpdateData:interface'
     name: Interfaces.ChartBorderUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartBorderData:interface'
     name: Excel.Interfaces.ChartBorderData
