--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.rangeformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.rangeformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData:interface'
-    summary: '<span data-ttu-id="03e8c-101">一个用于更新 RangeFormat 对象上的数据的接口，可用于`rangeFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="03e8c-101">An interface for updating data on the RangeFormat object, for use in `rangeFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="03e8c-102">.</span><span class="sxs-lookup"><span data-stu-id="03e8c-102"></span></span>'
+    summary: '一个用于更新 RangeFormat 对象上的数据的接口，可用于`rangeFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RangeFormatUpdateData
     fullName: Excel.Interfaces.RangeFormatUpdateData
     langs:
@@ -23,9 +23,9 @@ items:
       - 'excel!Excel.Interfaces.RangeFormatUpdateData#wrapText:member'
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData#borders:member'
     summary: |-
-      <span data-ttu-id="03e8c-103">应用于整个区域的 Border 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="03e8c-103">Collection of border objects that apply to the overall range.</span></span>
+      应用于整个区域的 Border 对象的集合。
 
-      <span data-ttu-id="03e8c-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="03e8c-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: borders
     fullName: borders
     langs:
@@ -38,9 +38,9 @@ items:
           - 'excel!Excel.Interfaces.RangeBorderCollectionUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData#columnWidth:member'
     summary: |-
-      <span data-ttu-id="03e8c-105">获取或设置区域内的所有列的宽度。</span><span class="sxs-lookup"><span data-stu-id="03e8c-105">Gets or sets the width of all colums within the range.</span></span> <span data-ttu-id="03e8c-106">如果列宽不统一，则返回 NULL。</span><span class="sxs-lookup"><span data-stu-id="03e8c-106">If the column widths are not uniform, null will be returned.</span></span>
+      指定区域中所有 colums 的宽度。 如果列宽不统一，则返回 NULL。
 
-      <span data-ttu-id="03e8c-107">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="03e8c-107">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnWidth
     fullName: columnWidth
     langs:
@@ -53,9 +53,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData#fill:member'
     summary: |-
-      <span data-ttu-id="03e8c-108">返回在整个区域内定义的 fill 对象。</span><span class="sxs-lookup"><span data-stu-id="03e8c-108">Returns the fill object defined on the overall range.</span></span>
+      返回在整个区域内定义的 fill 对象。
 
-      <span data-ttu-id="03e8c-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="03e8c-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -68,9 +68,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFillUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData#font:member'
     summary: |-
-      <span data-ttu-id="03e8c-110">返回在整个区域内定义的 Font 对象。</span><span class="sxs-lookup"><span data-stu-id="03e8c-110">Returns the font object defined on the overall range.</span></span>
+      返回在整个区域内定义的 Font 对象。
 
-      <span data-ttu-id="03e8c-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="03e8c-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -83,9 +83,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFontUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData#horizontalAlignment:member'
     summary: |-
-      <span data-ttu-id="03e8c-112">表示指定对象的水平对齐方式。</span><span class="sxs-lookup"><span data-stu-id="03e8c-112">Represents the horizontal alignment for the specified object.</span></span> <span data-ttu-id="03e8c-113">有关详细信息，请参阅 HorizontalAlignment。</span><span class="sxs-lookup"><span data-stu-id="03e8c-113">See Excel.HorizontalAlignment for details.</span></span>
+      表示指定对象的水平对齐方式。 有关详细信息，请参阅 HorizontalAlignment。
 
-      <span data-ttu-id="03e8c-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="03e8c-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -98,9 +98,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatUpdateData#horizontalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData#protection:member'
     summary: |-
-      <span data-ttu-id="03e8c-115">返回某一区域的格式 protection 对象。</span><span class="sxs-lookup"><span data-stu-id="03e8c-115">Returns the format protection object for a range.</span></span>
+      返回某一区域的格式 protection 对象。
 
-      <span data-ttu-id="03e8c-116">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="03e8c-116">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
     fullName: protection
     langs:
@@ -113,9 +113,9 @@ items:
           - 'excel!Excel.Interfaces.FormatProtectionUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData#rowHeight:member'
     summary: |-
-      <span data-ttu-id="03e8c-117">获取或设置区域中所有行的高度。</span><span class="sxs-lookup"><span data-stu-id="03e8c-117">Gets or sets the height of all rows in the range.</span></span> <span data-ttu-id="03e8c-118">如果行高不一致，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="03e8c-118">If the row heights are not uniform, null will be returned.</span></span>
+      区域中所有行的高度。 如果行高不一致，则将返回 null。
 
-      <span data-ttu-id="03e8c-119">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="03e8c-119">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowHeight
     fullName: rowHeight
     langs:
@@ -128,9 +128,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData#textOrientation:member'
     summary: |-
-      <span data-ttu-id="03e8c-120">获取或设置区域内的所有单元格的文本方向。</span><span class="sxs-lookup"><span data-stu-id="03e8c-120">Gets or sets the text orientation of all the cells within the range.</span></span> <span data-ttu-id="03e8c-121">文本方向应为-90 到90之间的整数，或者为180垂直方向的文本。</span><span class="sxs-lookup"><span data-stu-id="03e8c-121">The text orientation should be an integer either from -90 to 90, or 180 for vertically-oriented text.</span></span> <span data-ttu-id="03e8c-122">如果区域中的方向不一致，则将返回 null。</span><span class="sxs-lookup"><span data-stu-id="03e8c-122">If the orientation within a range are not uniform, then null will be returned.</span></span>
+      区域中所有单元格的文本方向。 文本方向应为-90 到90之间的整数，或者为180垂直方向的文本。 如果区域中的方向不一致，则将返回 null。
 
-      <span data-ttu-id="03e8c-123">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="03e8c-123">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
     fullName: textOrientation
     langs:
@@ -143,9 +143,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData#useStandardHeight:member'
     summary: |-
-      <span data-ttu-id="03e8c-124">确定 Range 对象的行高是否等于工作表的标准行高。</span><span class="sxs-lookup"><span data-stu-id="03e8c-124">Determines if the row height of the Range object equals the standard height of the sheet.</span></span> <span data-ttu-id="03e8c-125">如果 Range 对象的行高等于工作表的标准高度，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="03e8c-125">Returns True if the row height of the Range object equals the standard height of the sheet.</span></span> <span data-ttu-id="03e8c-126">如果区域包含多行，并且行不是都具有相同的高度，则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="03e8c-126">Returns Null if the range contains more than one row and the rows aren't all the same height.</span></span> <span data-ttu-id="03e8c-127">否则返回 False。</span><span class="sxs-lookup"><span data-stu-id="03e8c-127">Returns False otherwise.</span></span>
+      确定 Range 对象的行高是否等于工作表的标准行高。 如果 Range 对象的行高等于工作表的标准高度，则返回 True。 如果区域包含多行，并且行不是都具有相同的高度，则返回 Null。 否则返回 False。
 
-      <span data-ttu-id="03e8c-128">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="03e8c-128">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardHeight
     fullName: useStandardHeight
     langs:
@@ -158,9 +158,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData#useStandardWidth:member'
     summary: |-
-      <span data-ttu-id="03e8c-129">指示 Range 对象的列宽是否等于工作表的标准宽度。</span><span class="sxs-lookup"><span data-stu-id="03e8c-129">Indicates whether the column width of the Range object equals the standard width of the sheet.</span></span> <span data-ttu-id="03e8c-130">如果 Range 对象的列宽等于工作表的标准宽度，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="03e8c-130">Returns True if the column width of the Range object equals the standard width of the sheet.</span></span> <span data-ttu-id="03e8c-131">如果区域中包含多个列，并且各列的高度不相同，则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="03e8c-131">Returns Null if the range contains more than one column and the columns aren't all the same height.</span></span> <span data-ttu-id="03e8c-132">否则返回 False。</span><span class="sxs-lookup"><span data-stu-id="03e8c-132">Returns False otherwise.</span></span>
+      指定 Range 对象的列宽是否等于工作表的标准宽度。 如果 Range 对象的列宽等于工作表的标准宽度，则返回 True。 如果区域中包含多个列，并且各列的高度不相同，则返回 Null。 否则返回 False。
 
-      <span data-ttu-id="03e8c-133">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="03e8c-133">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: useStandardWidth
     fullName: useStandardWidth
     langs:
@@ -173,9 +173,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData#verticalAlignment:member'
     summary: |-
-      <span data-ttu-id="03e8c-134">表示指定对象的垂直对齐方式。</span><span class="sxs-lookup"><span data-stu-id="03e8c-134">Represents the vertical alignment for the specified object.</span></span> <span data-ttu-id="03e8c-135">有关详细信息，请参阅 VerticalAlignment。</span><span class="sxs-lookup"><span data-stu-id="03e8c-135">See Excel.VerticalAlignment for details.</span></span>
+      表示指定对象的垂直对齐方式。 有关详细信息，请参阅 VerticalAlignment。
 
-      <span data-ttu-id="03e8c-136">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="03e8c-136">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -188,9 +188,9 @@ items:
           - 'excel!Excel.Interfaces.RangeFormatUpdateData#verticalAlignment~0:complex'
   - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData#wrapText:member'
     summary: |-
-      <span data-ttu-id="03e8c-137">指示 Excel 是否将对象中的文本换行。</span><span class="sxs-lookup"><span data-stu-id="03e8c-137">Indicates if Excel wraps the text in the object.</span></span> <span data-ttu-id="03e8c-138">指示整个区域不具有统一换行设置的空值</span><span class="sxs-lookup"><span data-stu-id="03e8c-138">A null value indicates that the entire range doesn't have uniform wrap setting</span></span>
+      指定 Excel 是否对对象中的文本进行换行。 指示整个区域不具有统一换行设置的空值
 
-      <span data-ttu-id="03e8c-139">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="03e8c-139">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: wrapText
     fullName: wrapText
     langs:
