--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.charttrendlinelabelformat.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.charttrendlinelabelformat.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartTrendlineLabelFormat:class'
     summary: |-
-      <span data-ttu-id="38947-101">封装图表趋势线标签的格式属性。</span><span class="sxs-lookup"><span data-stu-id="38947-101">Encapsulates the format properties for the chart trendline label.</span></span>
+      封装图表趋势线标签的格式属性。
 
-      <span data-ttu-id="38947-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="38947-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartTrendlineLabelFormat
     fullName: Excel.ChartTrendlineLabelFormat
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartTrendlineLabelFormat#border:member'
@@ -26,9 +26,9 @@ items:
       - 'excel!Excel.ChartTrendlineLabelFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ChartTrendlineLabelFormat#border:member'
     summary: |-
-      <span data-ttu-id="38947-103">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="38947-103">Represents the border format, which includes color, linestyle, and weight.</span></span>
+      指定边框格式，包括颜色、linestyle 和粗细。
 
-      <span data-ttu-id="38947-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="38947-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
@@ -40,7 +40,7 @@ items:
         type:
           - 'excel!Excel.ChartBorder:class'
   - uid: 'excel!Excel.ChartTrendlineLabelFormat#context:member'
-    summary: <span data-ttu-id="38947-105">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="38947-105">The request context associated with the object.</span></span> <span data-ttu-id="38947-106">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="38947-106">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -53,9 +53,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartTrendlineLabelFormat#fill:member'
     summary: |-
-      <span data-ttu-id="38947-107">表示当前图表趋势线标签的填充格式。</span><span class="sxs-lookup"><span data-stu-id="38947-107">Represents the fill format of the current chart trendline label.</span></span>
+      指定当前图表趋势线标签的填充格式。
 
-      <span data-ttu-id="38947-108">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="38947-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -68,9 +68,9 @@ items:
           - 'excel!Excel.ChartFill:class'
   - uid: 'excel!Excel.ChartTrendlineLabelFormat#font:member'
     summary: |-
-      <span data-ttu-id="38947-109">表示图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="38947-109">Represents the font attributes (font name, font size, color, etc.) for a chart trendline label.</span></span>
+      指定图表趋势线标签的字体属性（字体名称、字体大小、颜色等）。
 
-      <span data-ttu-id="38947-110">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="38947-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -82,7 +82,7 @@ items:
         type:
           - 'excel!Excel.ChartFont:class'
   - uid: 'excel!Excel.ChartTrendlineLabelFormat#load:member(1)'
-    summary: <span data-ttu-id="38947-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="38947-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="38947-112">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="38947-112">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -96,11 +96,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="38947-113">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="38947-113">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartTrendlineLabelFormatLoadOptions:interface'
   - uid: 'excel!Excel.ChartTrendlineLabelFormat#load:member(2)'
-    summary: <span data-ttu-id="38947-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="38947-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="38947-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="38947-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -114,11 +114,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="38947-116">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="38947-116">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartTrendlineLabelFormat#load:member(3)'
-    summary: <span data-ttu-id="38947-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="38947-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="38947-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="38947-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -136,7 +136,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="38947-119">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="38947-119">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -144,9 +144,9 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.ChartTrendlineLabelFormat#set:member(1)'
-    summary: '<span data-ttu-id="38947-120">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="38947-120">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="38947-121">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="38947-121">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="38947-122">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="38947-122">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartTrendlineLabelFormat): void`
     name: 'set(properties, options)'
@@ -162,15 +162,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="38947-123">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="38947-123">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartTrendlineLabelFormatUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="38947-124">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="38947-124">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartTrendlineLabelFormat#set:member(2)'
-    summary: '<span data-ttu-id="38947-125">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="38947-125">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -188,7 +188,7 @@ items:
           type:
             - 'excel!Excel.ChartTrendlineLabelFormat:class'
   - uid: 'excel!Excel.ChartTrendlineLabelFormat#toJSON:member(1)'
-    summary: '<span data-ttu-id="38947-126">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="38947-126">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="38947-127">.</span><span class="sxs-lookup"><span data-stu-id="38947-127"></span></span> <span data-ttu-id="38947-128">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="38947-128"></span></span><!-- --><span data-ttu-id="38947-129">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartTrendlineLabelFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartTrendlineLabelFormatData`</span><span class="sxs-lookup"><span data-stu-id="38947-129">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartTrendlineLabelFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartTrendlineLabelFormatData`</span></span><!-- --><span data-ttu-id="38947-130">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="38947-130">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartTrendlineLabelFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartTrendlineLabelFormatData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -201,7 +201,7 @@ items:
           - 'excel!Excel.Interfaces.ChartTrendlineLabelFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartBorder:class'
     name: Excel.ChartBorder
@@ -217,7 +217,7 @@ references:
     name: Excel.Interfaces.ChartTrendlineLabelFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatUpdateData:interface'
     name: Interfaces.ChartTrendlineLabelFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatData:interface'
     name: Excel.Interfaces.ChartTrendlineLabelFormatData
