--- a/docs/docs-ref-autogen/word_1_1/word/word.sectioncollection.yml
+++ b/docs/docs-ref-autogen/word_1_1/word/word.sectioncollection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'word!Word.SectionCollection:class'
     summary: |-
-      <span data-ttu-id="71b84-101">包含文档的[Word](xref:word!Word.Section:class)的集合。</span><span class="sxs-lookup"><span data-stu-id="71b84-101">Contains the collection of the document's [Word.Section](xref:word!Word.Section:class) objects.</span></span>
+      包含文档的[Word](xref:word!Word.Section:class)的集合。
 
-      <span data-ttu-id="71b84-102">\[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="71b84-102">\[ [API set: WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>
+      \[[API 集： WordApi 1.1](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
     name: Word.SectionCollection
     fullName: Word.SectionCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'word!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: word!
     children:
       - 'word!Word.SectionCollection#context:member'
@@ -23,7 +23,7 @@ items:
       - 'word!Word.SectionCollection#track:member(1)'
       - 'word!Word.SectionCollection#untrack:member(1)'
   - uid: 'word!Word.SectionCollection#context:member'
-    summary: <span data-ttu-id="71b84-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="71b84-103">The request context associated with the object.</span></span> <span data-ttu-id="71b84-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="71b84-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -35,7 +35,7 @@ items:
         type:
           - 'word!Word.RequestContext:class'
   - uid: 'word!Word.SectionCollection#items:member'
-    summary: <span data-ttu-id="71b84-105">获取此集合中已加载的子项。</span><span class="sxs-lookup"><span data-stu-id="71b84-105">Gets the loaded child items in this collection.</span></span>
+    summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
     langs:
@@ -47,15 +47,15 @@ items:
         type:
           - 'word!Word.SectionCollection#items~0:complex'
   - uid: 'word!Word.SectionCollection#load:member(1)'
-    summary: <span data-ttu-id="71b84-106">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="71b84-106">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="71b84-107">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="71b84-107">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="71b84-108">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="71b84-108">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="71b84-109">`load(option?: string | string[]): Word.SectionCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="71b84-109">`load(option?: string | string[]): Word.SectionCollection` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): Word.SectionCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="71b84-110">`load(option?: { select?: string; expand?: string; }): Word.SectionCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="71b84-110">`load(option?: { select?: string; expand?: string; }): Word.SectionCollection` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): Word.SectionCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="71b84-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.SectionCollection`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="71b84-111">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.SectionCollection` - Only available on collection types.</span></span> <span data-ttu-id="71b84-112">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="71b84-112">It is similar to the preceding signature.</span></span> <span data-ttu-id="71b84-113">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="71b84-113">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="71b84-114">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="71b84-114">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="71b84-115">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="71b84-115">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Word.SectionCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -73,7 +73,7 @@ items:
           type:
             - 'word!Word.SectionCollection#load~0:complex'
   - uid: 'word!Word.SectionCollection#load:member(2)'
-    summary: <span data-ttu-id="71b84-116">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="71b84-116">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="71b84-117">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="71b84-117">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -87,7 +87,7 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="71b84-118">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="71b84-118">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'word!Word.SectionCollection#load:member(3)'
@@ -106,9 +106,9 @@ items:
         - id: option
           description: ''
           type:
-            - 'word!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'word!Word.SectionCollection#toJSON:member(1)'
-    summary: '<span data-ttu-id="71b84-119">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="71b84-119">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="71b84-120">.</span><span class="sxs-lookup"><span data-stu-id="71b84-120"></span></span> <span data-ttu-id="71b84-121">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="71b84-121"></span></span><!-- --><span data-ttu-id="71b84-122">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Word.SectionCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.SectionCollectionData`</span><span class="sxs-lookup"><span data-stu-id="71b84-122">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original `Word.SectionCollection` object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Word.Interfaces.SectionCollectionData`</span></span><!-- --><span data-ttu-id="71b84-123">），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。</span><span class="sxs-lookup"><span data-stu-id="71b84-123">) that contains an "items" array with shallow copies of any loaded properties from the collection''s items.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Word.SectionCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Word.Interfaces.SectionCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -121,7 +121,7 @@ items:
           - 'word!Word.Interfaces.SectionCollectionData:interface'
         description: ''
   - uid: 'word!Word.SectionCollection#track:member(1)'
-    summary: '<span data-ttu-id="71b84-124">根据文档中的相应更改来跟踪对象，以便进行自动调整。</span><span class="sxs-lookup"><span data-stu-id="71b84-124">Track the object for automatic adjustment based on surrounding changes in the document.</span></span> <span data-ttu-id="71b84-125">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="71b84-125">This call is a shorthand for context.trackedObjects.add(thisObject).</span></span> <span data-ttu-id="71b84-126">如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。</span><span class="sxs-lookup"><span data-stu-id="71b84-126">If you are using this object across ".sync" calls and outside the sequential execution of a ".run" batch, and get an "InvalidObjectPath" error when setting a property or invoking a method on the object, you needed to have added the object to the tracked object collection when the object was first created.</span></span>'
+    summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
     name: track()
     fullName: track()
     langs:
@@ -134,7 +134,7 @@ items:
           - 'word!Word.SectionCollection:class'
         description: ''
   - uid: 'word!Word.SectionCollection#untrack:member(1)'
-    summary: '<span data-ttu-id="71b84-127">释放与此对象关联的内存（如果先前已跟踪过）。</span><span class="sxs-lookup"><span data-stu-id="71b84-127">Release the memory associated with this object, if it has previously been tracked.</span></span> <span data-ttu-id="71b84-128">此调用是 context.trackedObjects.add(thisObject) 的缩写。</span><span class="sxs-lookup"><span data-stu-id="71b84-128">This call is shorthand for context.trackedObjects.remove(thisObject).</span></span> <span data-ttu-id="71b84-129">拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。</span><span class="sxs-lookup"><span data-stu-id="71b84-129">Having many tracked objects slows down the host application, so please remember to free any objects you add, once you''re done using them.</span></span> <span data-ttu-id="71b84-130">在内存释放生效之前，你需要调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="71b84-130">You will need to call "context.sync()" before the memory release takes effect.</span></span>'
+    summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
     name: untrack()
     fullName: untrack()
     langs:
@@ -147,7 +147,7 @@ items:
           - 'word!Word.SectionCollection:class'
         description: ''
 references:
-  - uid: 'word!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'word!Word.RequestContext:class'
     name: RequestContext
@@ -174,7 +174,7 @@ references:
       - uid: 'word!Word.Interfaces.CollectionLoadOptions:interface'
         name: Word.Interfaces.CollectionLoadOptions
         fullName: Word.Interfaces.CollectionLoadOptions
-  - uid: 'word!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'word!Word.Interfaces.SectionCollectionData:interface'
     name: Word.Interfaces.SectionCollectionData
